--- a/Profile.html
+++ b/Profile.html
@@ -6,67 +6,49 @@
     <title>About Achuth Praneeth Bollina</title>
     <link rel="icon" href="./static/favicon.ico" sizes="any">
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            line-height: 1.6;
-            margin: 0;
-            padding: 20px;
-            max-width: 800px;
-            margin: 0 auto;
-        }
-        h1, h2 {
-            color: #333;
-        }
-        img {
-            max-width: 200px;
-            border-radius: 50%;
-        }
-        .section {
-            margin-bottom: 20px;
-        }
-        .resume-frame {
-            width: 100%;
-            height: 600px;
-            border: 1px solid #ddd;
-        }
+        
     </style>
+    <link rel="stylesheet" type="text/css" href="./static/style.css" />
 </head>
 <body>
-    <header>
-        <h1>Achuth Bollina</h1>
-        <img src="./static/profile.png" alt="APB">
-    </header>
+    <div class="container">
+        <div class="content">
+            <header>
+                <h1>Achuth Bollina</h1>
+                <img src="./static/profile.png" alt="APB">
+            </header>
 
-    <section class="section">
-        <h2>About Me</h2>
-        <p>Tech @ BMS Leading Full Stack, Cloud and DevOps Architecture teams</p>
-    </section>
+            <section class="section">
+                <h2>About Me</h2>
+                <p>Tech @ BMS Leading Full Stack, Cloud and DevOps Architecture teams</p>
+            </section>
 
-    <section class="section">
-        <h2>Contact Information</h2>
-        <ul>
-            <li>Email: Achuth.Praneeth@outlook.com</li>
-            <li>Phone: +91-9704044001</li>
-            <li>Location: Hyderabad, India</li>
-        </ul>
-    </section>
+            <section class="section">
+                <h2>Contact Information</h2>
+                <ul>
+                    <li>Email: Achuth.Praneeth@outlook.com</li>
+                    <li>Phone: +91-9704044001</li>
+                    <li>Location: Hyderabad, India</li>
+                </ul>
+            </section>
 
-    <section class="section">
-        <h2>Skills</h2>
-        <ul>
-            <li>Cloud [AWS, Azure and OpenStack]</li>
-            <li>DevOps [Kubernetes, Docker, Github Actions and Azure ADO]</li>
-            <li>Programming Languages [Python, Javascript and Go Lang]</li>
-            <li>Team Managment</li>
-            <li>Product Management</li>
-            <li>Program Management</li>
-        </ul>
-    </section>
+            <section class="section">
+                <h2>Skills</h2>
+                <ul>
+                    <li>Cloud [AWS, Azure and OpenStack]</li>
+                    <li>DevOps [Kubernetes, Docker, Github Actions and Azure ADO]</li>
+                    <li>Programming Languages [Python, Javascript and Go Lang]</li>
+                    <li>Team Management</li>
+                    <li>Product Management</li>
+                    <li>Program Management</li>
+                </ul>
+            </section>
+        </div>
 
-    <section class="section">
-        <h2>Resume</h2>
-        <p>Here's my detailed resume:</p>
-        <iframe src="./static/resume.pdf" class="resume-frame" title="My Resume"></iframe>
-    </section>
+        <section class="section resume-section">
+            <h2>Resume</h2>
+            <iframe src="./static/resume.pdf" class="resume-frame" title="My Resume"></iframe>
+        </section>
+    </div>
 </body>
 </html>
